Fix view width showing horizontal scroll bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 
 html {
     min-height: 100vh;
-    min-width: 100vw;
+    min-width: 98vw;
 }
 
 body {
